Up [Ov] -> Se ancla a proyecto de comprobantes